--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 
 *.db
 ExtractDataSQL.ipynb
-/data/IMDB
-data/Kaggle/Mojo_budget_update.csv/Mojo_budget_update.csv.zip
-data/Kaggle/Rotten_Tomatoes/Rotten_Tomatoes.zip
-/data/Kaggle
+/data
+.DS_Store
+.idea/
